[signin] Add unittest for ProcessDiceHeaderDelegateImpl

This CL fixes a crash happening when the signin tab is closed during
the signin process. This CL also adds unittests for the class.

Bug: 794152
Change-Id: I9c0c1faec7e2a9e564dc35f1b76eb2fa4f8d9bb7
Reviewed-on: https://chromium-review.googlesource.com/817596
Commit-Queue: David Roger <droger@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523433}
Former-commit-id: 17e9032193fd9c06b12fcd44c068e8f17ac7c445