chrome/browser/signin/chrome_signin_helper.cc
@@ -11,6 +11,7 @@
 #include "base/logging.h"
 #include "base/memory/ref_counted.h"
 #include "base/strings/string_util.h"
+#include "base/strings/utf_string_conversions.h"
 #include "base/supports_user_data.h"
 #include "base/threading/thread_task_runner_handle.h"
 #include "base/time/time.h"
@@ -21,9 +22,15 @@
 #include "chrome/browser/signin/chrome_signin_client.h"
 #include "chrome/browser/signin/chrome_signin_client_factory.h"
 #include "chrome/browser/signin/dice_response_handler.h"
+#include "chrome/browser/signin/dice_tab_helper.h"
 #include "chrome/browser/signin/process_dice_header_delegate_impl.h"
+#include "chrome/browser/signin/signin_manager_factory.h"
 #include "chrome/browser/tab_contents/tab_util.h"
+#include "chrome/browser/ui/browser_finder.h"
 #include "chrome/browser/ui/browser_window.h"
+#include "chrome/browser/ui/webui/signin/dice_turn_sync_on_helper.h"
+#include "chrome/browser/ui/webui/signin/login_ui_service.h"
+#include "chrome/browser/ui/webui/signin/login_ui_service_factory.h"
 #include "chrome/common/url_constants.h"
 #include "components/signin/core/browser/account_reconcilor.h"
 #include "components/signin/core/browser/chrome_connected_header_helper.h"
@@ -238,6 +245,35 @@ void ProcessMirrorHeaderUIThread(
 }
 
 #if BUILDFLAG(ENABLE_DICE_SUPPORT)
+
+// Creates a DiceTurnOnSyncHelper.
+void CreateDiceTurnOnSyncHelper(Profile* profile,
+                                signin_metrics::AccessPoint access_point,
+                                signin_metrics::Reason reason,
+                                content::WebContents* web_contents,
+                                const std::string& account_id) {
+  DCHECK(profile);
+  Browser* browser = web_contents
+                         ? chrome::FindBrowserWithWebContents(web_contents)
+                         : chrome::FindBrowserWithProfile(profile);
+  // DiceTurnSyncOnHelper is suicidal (it will kill itself once it finishes
+  // enabling sync).
+  new DiceTurnSyncOnHelper(profile, browser, access_point, reason, account_id);
+}
+
+// Shows UI for signin errors.
+void ShowDiceSigninError(Profile* profile,
+                         content::WebContents* web_contents,
+                         const std::string& error_message,
+                         const std::string& email) {
+  DCHECK(profile);
+  Browser* browser = web_contents
+                         ? chrome::FindBrowserWithWebContents(web_contents)
+                         : chrome::FindBrowserWithProfile(profile);
+  LoginUIServiceFactory::GetForProfile(profile)->DisplayLoginResult(
+      browser, base::UTF8ToUTF16(error_message), base::UTF8ToUTF16(email));
+}
+
 void ProcessDiceHeaderUIThread(
     const DiceResponseParams& dice_params,
     const content::ResourceRequestInfo::WebContentsGetter&
@@ -253,11 +289,27 @@ void ProcessDiceHeaderUIThread(
       Profile::FromBrowserContext(web_contents->GetBrowserContext());
   DCHECK(!profile->IsOffTheRecord());
 
+  signin_metrics::AccessPoint access_point =
+      signin_metrics::AccessPoint::ACCESS_POINT_UNKNOWN;
+  signin_metrics::Reason reason = signin_metrics::Reason::REASON_UNKNOWN_REASON;
+  bool is_sync_signin_tab = false;
+  DiceTabHelper* tab_helper = DiceTabHelper::FromWebContents(web_contents);
+  if (signin::IsDicePrepareMigrationEnabled() && tab_helper) {
+    is_sync_signin_tab = tab_helper->should_start_sync_after_web_signin();
+    access_point = tab_helper->signin_access_point();
+    reason = tab_helper->signin_reason();
+  }
+
   DiceResponseHandler* dice_response_handler =
       DiceResponseHandler::GetForProfile(profile);
   dice_response_handler->ProcessDiceHeader(
       dice_params,
-      base::MakeUnique<ProcessDiceHeaderDelegateImpl>(web_contents));
+      base::MakeUnique<ProcessDiceHeaderDelegateImpl>(
+          web_contents, profile->GetPrefs(),
+          SigninManagerFactory::GetForProfile(profile), is_sync_signin_tab,
+          base::BindOnce(&CreateDiceTurnOnSyncHelper, base::Unretained(profile),
+                         access_point, reason),
+          base::BindOnce(&ShowDiceSigninError, base::Unretained(profile))));
 }
 #endif  // BUILDFLAG(ENABLE_DICE_SUPPORT)
 
